pkg/lang/syntax/testdata/ub/invalid/duplicate-fields/factory/state-move-entry.ub
factory: {
  state-moves: [
    {
      from: 'resource.old'
      from: 'resource.other'
      to:   'resource.new'
    }
  ]
}
